<resources>
    <string name="app_name">CineConnect</string>
    <string name="already_have_an_account_str"><u>Already have an account?</u></string>
    <string name="skip"><u>Skip</u></string>
    <string name="welcome_to_cineconnect">Welcome to CineConnect</string>
    <string name="discover_your_favourite_movies_and_series">Discover your favourite movies</string>
    <string name="join_us_now">Join us now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get started</string>
    <string name="intro_image">intro image</string>
    <string name="log_in">Log In</string>
    <string name="password">password</string>
    <string name="username_or_email">username or email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="none">none</string>
    <string name="directed_by">DIRECTED BY</string>
    <string name="liked">Liked</string>
    <string name="reviews">Reviews</string>
    <string name="movie_participate">Movie Participate</string>
    <string name="find_movies_reviews_people">Find movies,reviews,people</string>
    <string name="cancel">Cancel</string>
    <string name="review">Review</string>
    <string name="follow">FOLLOW</string>
    <string name="following">FOLLOWING</string>
    <string name="favourite">Favourite</string>
    <string name="activity">Activity</string>
    <string name="films">Films</string>
    <string name="cine_connect">CINE CONNECT</string>
    <string name="take_photo_button">Take Photo</string>
    <string name="choose_from_gallery_button">Choose from Gallery</string>
    <string name="cancel_button">Cancel</string>
    <string name="choose_picture_title">Choose your profile picture</string>
</resources>