<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".fragment.authenticationFragment.SignInFragment">


        <FrameLayout
            android:id="@+id/bg_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_arrow_back_ios_30"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_intro_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/intro_image"
                    android:scaleType="center"
                    android:src="@drawable/intro_pic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/iv_intro_image2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/intro_image"
                    android:src="@drawable/gradient_background"
                    app:layout_constraintBottom_toBottomOf="@id/iv_intro_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    tools:ignore="ImageContrastCheck" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_intro_image2"

                    >

                    <TextView
                        android:id="@+id/tv_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in"
                        android:textAlignment="center"
                        android:textColor="@color/orange"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_username_or_email"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="40dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_bg"
                        android:ems="8"
                        android:hint="@string/username_or_email"
                        android:inputType="text"
                        android:padding="20dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        app:layout_constraintTop_toBottomOf="@id/tv_signup"
                        tools:ignore="TextFields" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="20dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_bg"
                        android:ems="8"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="20dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        app:layout_constraintTop_toBottomOf="@id/et_username_or_email" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@id/et_password">

                        <TextView
                            android:id="@+id/forgot_password_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="onClick"
                            android:text="@string/forgot_password"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="TouchTargetSizeCheck" />

                        <TextView
                            android:id="@+id/go_to_signup_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="onClick"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"

                            tools:ignore="TouchTargetSizeCheck" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/log_in"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_forgot_password" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/progress_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@color/black"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:visibility="visible"

                    />
            </FrameLayout>


        </FrameLayout>


    </ScrollView>
</layout>
