<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.mainFragment.SearchFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.cineconnect.viewmodel.MovieViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/black2"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black2"
                    app:layout_collapseMode="pin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/search_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:text="@string/search"
                            android:textColor="@color/white"
                            android:textSize="30sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/outlinedTextField"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:boxBackgroundColor="@color/white"
                                app:boxCornerRadiusBottomEnd="30dp"
                                app:boxCornerRadiusBottomStart="30dp"
                                app:boxCornerRadiusTopEnd="30dp"
                                app:boxCornerRadiusTopStart="30dp"
                                app:hintEnabled="false"
                                app:startIconDrawable="@drawable/search_icon">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/searchTextInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:layout_marginEnd="12dp"
                                    android:background="@color/main_color"
                                    android:hint="@string/find_movies_reviews_people"
                                    android:paddingStart="49dp"
                                    android:paddingEnd="0dp"
                                    android:text="@={viewModel.searchQuery}"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/grey"
                                    android:textSize="15sp" />


                            </com.google.android.material.textfield.TextInputLayout>

                            <TextView
                                android:id="@+id/cancel_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="10dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:onClick="onClick"
                                android:text="@string/cancel"
                                android:textAppearance="@style/text_button"
                                android:textColor="@color/white"
                                android:visibility="gone" />
                        </LinearLayout>


                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.example.cineconnect.customLayout.CustomTabBar
                android:id="@+id/tab_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/searchTabs"
                android:visibility="gone" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingBottom="10dp" />
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
